# dev-overload-starterpack

./: .gitignore  LICENSE  README.md
ai/: README.md
devops-starter/: .gitignore  README.md  pyproject.toml
devops-starter/ansible/: README.md
devops-starter/grafana-labs/: Pipfile  README.md  docker-compose.yml  loki-config.yaml  promtail-config.yaml
devops-starter/hashicorp-terraform/: README.md  main.tf  outputs.tf  variables.tf
devops-starter/hashicorp-vagrant/: README.md
devops-starter/hashicorp-vault/: .env.sample  Pipfile  README.md  admin-policy.hcl  common-handlers.yml  config.hcl  docker-compose.yaml  main-app.py  manage-playbook.yml  playbook.yml  scraper-policy.hcl  vars.yml  vault-agent-config.hcl  vault-agent.Dockerfile  vault-agent.json.tmpl  vault-agent.tmpl  vault.Dockerfile  vault_agent_init.yml  vault_client_scraper_init.yml
devops-starter/kubernetes/: README.md
devops-starter/prefect/: Pipfile  README.md  deployment.py  docker-compose.yaml  flow.py  my_flow-deployment.yaml  prefect.Dockerfile
devops-starter/terraform/: README.md
python-starter/: .gitignore  LICENSE  README.md  pyproject.toml
python-starter/algorithms/: README.md
python-starter/clean_code/: README.md
python-starter/core/: README.md  coroutines.py  decorators.py  decorators2.py  filter.py  generators.py  lambda.py  map.py  reduce.py  threading_sample.py  zip.py
python-starter/design/: README.md
python-starter/refactoring/: README.md
python-starter/socket/: README.md
python-starter/solid/: README.md  dip.py  isp.py  lsp.py  ocp.py  srp.py
rabbitmq-starter/: README.md  pyproject.toml
rabbitmq-starter/pubsub/: emit_log.py  receive_logs.py
rabbitmq-starter/routing/: emit_log_direct.py  receive_logs_direct.py
rabbitmq-starter/rpc/: rpc_client.py  rpc_server.py
rabbitmq-starter/sendreceive/: receive.py  send.py
rabbitmq-starter/topic/: emit_log_topic.py  receive_logs_topic.py
rabbitmq-starter/workqueues/: new_task.py  worker.py
web-dev-boilerplates/django-app/: .gitignore  README.md  gunicorn.conf.py  pyproject.toml
(+406 files in other folders)
