[tool.poetry]
name = "arch-dev"
version = "0.1.0"
description = ""
authors = ["rr"]

[tool.poetry.dependencies]
python = "^3.8"
ansible = "^2.9.6"
jinja2 = "^2.11.1"
pyyaml = "^5.3.1"
cryptography = "^2.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
