[tool.poetry]
name = "python-developer"
version = "0.1.0"
description = "Coding in Python"
authors = ["name <name>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^5.4.1"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"