[tool.poetry]
name = "ops"
version = "0.1.0"
description = ""
authors = ["names <name>"]

[tool.poetry.dependencies]
python = "3.8.2"
jinja2 = "^2.11.1"
docker = "^4.2.0"
docker-compose = "^1.25.4"
PyYaml = ">=3.11"
cryptography = "^2.8"
ansible = "^2.9.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
